[gd_scene load_steps=10 format=3 uid="uid://0d0mtnsrn517"]

[ext_resource type="Script" path="res://crossyRoad.gd" id="1_071oq"]
[ext_resource type="Texture2D" uid="uid://b38fofaimaxj3" path="res://images/CrossyRoadWallpaper.jpg" id="2_7fyj5"]
[ext_resource type="Texture2D" uid="uid://iyk4txq48y6k" path="res://images/CrossyRoadPandaCars.png" id="3_d1rvc"]
[ext_resource type="Texture2D" uid="uid://bos4vk40j5htw" path="res://images/RedRPanda.png" id="4_cw2oh"]
[ext_resource type="Texture2D" uid="uid://cfbxdf1fht4nh" path="res://images/BlueRPanda.png" id="5_pidj2"]
[ext_resource type="Texture2D" uid="uid://dpjps6wpwre0q" path="res://images/CrossyRoadInstructions.png" id="6_trnk5"]
[ext_resource type="Texture2D" uid="uid://br6bfmp7qbcpy" path="res://images/CrossyRoadPlayerOneWins.png" id="7_jvoyi"]
[ext_resource type="Texture2D" uid="uid://5t2hkteyb5en" path="res://images/CrossyRoadPlayerTwoWins.png" id="8_7rir3"]
[ext_resource type="Texture2D" uid="uid://y7wfouc5hk0o" path="res://images/back.png" id="9_shnre"]

[node name="CrossyRoad" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_071oq")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1639.0
offset_bottom = 1025.0
texture = ExtResource("2_7fyj5")

[node name="pandaCar1" type="Sprite2D" parent="." groups=["pandaCars"]]
position = Vector2(92.5, 218.75)
scale = Vector2(0.326172, 0.297851)
texture = ExtResource("3_d1rvc")

[node name="pandaCar2" type="Sprite2D" parent="." groups=["pandaCars"]]
position = Vector2(910, 355)
scale = Vector2(0.326172, 0.297851)
texture = ExtResource("3_d1rvc")

[node name="pandaCar3" type="Sprite2D" parent="." groups=["pandaCars"]]
position = Vector2(1503, 462)
scale = Vector2(0.326172, 0.297851)
texture = ExtResource("3_d1rvc")

[node name="pandaCar4" type="Sprite2D" parent="." groups=["pandaCars"]]
position = Vector2(919, 610)
scale = Vector2(0.326172, 0.297851)
texture = ExtResource("3_d1rvc")

[node name="pandaCar5" type="Sprite2D" parent="." groups=["pandaCars"]]
position = Vector2(103, 716)
scale = Vector2(0.326172, 0.297851)
texture = ExtResource("3_d1rvc")

[node name="pandaCar6" type="Sprite2D" parent="." groups=["pandaCars"]]
position = Vector2(1501, 782)
scale = Vector2(0.326172, 0.297851)
texture = ExtResource("3_d1rvc")

[node name="Player1" type="Sprite2D" parent="."]
position = Vector2(413.293, 920)
scale = Vector2(0.46375, 0.562883)
texture = ExtResource("4_cw2oh")

[node name="Player2" type="Sprite2D" parent="."]
position = Vector2(1169, 920)
scale = Vector2(0.464, 0.563)
texture = ExtResource("5_pidj2")

[node name="Instructions" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 216.0
offset_right = 1307.0
offset_bottom = 851.0
texture = ExtResource("6_trnk5")
expand_mode = 1

[node name="PlayerOneWins" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 423.0
offset_top = 272.0
offset_right = 1201.0
offset_bottom = 796.0
texture = ExtResource("7_jvoyi")

[node name="PlayerTwoWins" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 423.0
offset_top = 272.0
offset_right = 1201.0
offset_bottom = 796.0
texture = ExtResource("8_7rir3")

[node name="BackBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1366.0
offset_top = 45.0
offset_right = 1595.0
offset_bottom = 110.0
texture = ExtResource("9_shnre")
expand_mode = 1

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1366.0
offset_top = 45.0
offset_right = 1596.0
offset_bottom = 111.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
